<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#bcf2b8"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/title_txt"
        android:textSize="25sp"
        android:text="@string/add_new_exercises"
        android:textColor="#ffffff"
        android:gravity="center"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline64"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:layout_width="318dp"
        android:layout_height="28dp"
        android:layout_below="@+id/title_txt"
        android:layout_margin="20dp"
        android:id="@+id/select_spinner_txt"
        android:gravity="center"
        android:text="@string/select_meal_eat"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline64"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline89" />



    <Spinner
        android:id="@+id/spinner1"
        android:textAlignment="center"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@+id/select_spinner_txt"
        android:entries="@array/acc_type"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline89"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline102" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_margin="25dp"
        android:orientation="horizontal"
        android:id="@+id/Linear2"

        android:layout_alignStart="@+id/spinner1"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline96"
        app:layout_constraintTop_toTopOf="@+id/guideline91"
        android:layout_marginTop="0dp">


        <Button
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:id="@+id/minutes_decrease"
            android:background="@drawable/minus_btn"
            android:layout_weight="0.02" />

        <TextView
            android:id="@+id/minutes_text"
            android:text="@string/_0"
            android:gravity="center"
            android:layout_width="30dp"
            android:layout_height="36dp"

            />

        <Button
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:background="@drawable/add_btn"
            android:id="@+id/minutes_increase"
            android:layout_weight="0.02" />

        <Button
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:layout_marginLeft="25dp"
            android:id="@+id/times_decrease"
            android:background="@drawable/minus_btn"
            android:layout_weight="0.02" />

        <TextView
            android:id="@+id/times_txt"
            android:text="@string/_0"
            android:gravity="center"
            android:layout_width="30dp"
            android:layout_height="36dp"

            />

        <Button
            android:id="@+id/times_increase"
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:layout_weight="0.02"
            android:background="@drawable/add_btn" />


        <Button
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:layout_marginLeft="25dp"
            android:id="@+id/meters_decrease"
            android:background="@drawable/minus_btn"
            android:layout_weight="0.02" />

        <TextView
            android:id="@+id/meters_txt"
            android:text="@string/_0"
            android:gravity="center"
            android:layout_width="30dp"
            android:layout_height="36dp"
            />

        <Button
            android:id="@+id/meters_increase"
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:layout_weight="0.02"
            android:background="@drawable/add_btn" />

    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:id="@+id/total_cal_burn_txt"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_below="@+id/Linear2"
        android:text="@string/total_calories_you_burned"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline97"
        android:textColor="#6291ff"
        app:layout_constraintTop_toTopOf="@+id/guideline96"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <!--&lt;!&ndash; Spinner Dropdown &ndash;&gt;-->
    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@+id/total_cal_burn_txt"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/total_cal_burn_txt"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline98"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <android.support.constraint.Guideline
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/guideline64"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/guideline89"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.19" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline90"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.31" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline91"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.43" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline94"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline95"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6472222" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:textColor="#6291ff"
        android:text="qty"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline94"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toTopOf="@+id/guideline90"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline91"
        app:layout_constraintHorizontal_bias="0.564" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="extra"
        android:gravity="center"
        android:textColor="#6291ff"
        app:layout_constraintTop_toTopOf="@+id/guideline90"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline95"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline91"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline94"
        app:layout_constraintHorizontal_bias="0.486" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/meters"
        android:textColor="#6291ff"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@+id/guideline90"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline95"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline91"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.444" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline96"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.57" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline97"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline98"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.77" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline99"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.93" />

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="Cancel"
        android:textColor="@color/White"
        android:background="#6291ff"
        app:layout_constraintTop_toTopOf="@+id/guideline98"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline99"
        app:layout_constraintRight_toLeftOf="@+id/guideline100"
        android:layout_marginRight="32dp"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.6" />

    <Button
        android:id="@+id/Add"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textColor="@color/White"
        android:text="Add"
        android:background="#6291ff"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline100"
        app:layout_constraintTop_toTopOf="@+id/guideline98"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline99"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginRight="32dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline100"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline102"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25749558" />

</android.support.constraint.ConstraintLayout>